fix home slider photo alignment

--- a/sass/pages/home.sass
+++ b/sass/pages/home.sass
@@ -302,6 +302,7 @@ section
             padding-right: 10px
             @media (max-width: $min)
                 flex-direction: column
+                justify-content: start
                 text-align: center
                 padding: 20px
                 padding: 0
